examples/test/testpolicy13555.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13555
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key28: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value46
          key26: value4
          key32: value45
      podSelector:
        matchLabels:
          key38: value1
